--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "puppeteer": "^24.26.1"
+    "puppeteer": "^24.26.1",
+    "pushover-notifications": "^1.2.3"
   },
   "engines": {
     "node": ">=24.0.0"
