chore: add linting and formatting to repo
- Introduced pretest script to run linting before tests
- Added linting scripts: `lint` for fixing issues and `lint:check` for checking without fixing
- Included formatting scripts: `format` for applying Prettier and `format:check` for checking formatting
- Added devDependencies for ESLint and Prettier configurations

--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "main": "check-steam-deck.js",
   "scripts": {
     "check": "node check-steam-deck.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "npm run lint",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --cache --fix",
+    "lint:check": "eslint . --cache",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "keywords": [
     "steam-deck",
@@ -26,5 +31,10 @@
   },
   "volta": {
     "node": "24.11.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.6.2"
   }
 }
