chore: add husky and lint-staged for pre-commit hooks
- Created a pre-commit hook to run lint-staged using Husky.
- Updated package.json to include husky and lint-staged as devDependencies.
- Configured lint-staged to run ESLint and Prettier on staged JavaScript files and format JSON, Markdown, and YAML files.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint . --cache --fix",
     "lint:check": "eslint . --cache",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "prepare": "husky"
   },
   "keywords": [
     "steam-deck",
@@ -35,6 +36,17 @@
   "devDependencies": {
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
     "prettier": "^3.6.2"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
