--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "puppeteer": "^24.26.1",
-    "pushover-notifications": "^1.2.3"
+    "pushover-notifications": "^1.2.3",
+    "yargs": "^18.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
