--- a/.github/workflows/steamdeck.yml
+++ b/.github/workflows/steamdeck.yml
@@ -2,25 +2,25 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: '*/60 * * * *'
+    - cron: "*/60 * * * *"
 
 jobs:
   scheduled:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out this repo
-      uses: actions/checkout@v4
+      - name: Check out this repo
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '24'
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "24"
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run Steam Deck stock check
-      run: npm run check
-      env:
-        PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
-        PUSHOVER_TOKEN: ${{ secrets.PUSHOVER_TOKEN }}
+      - name: Run Steam Deck stock check
+        run: node check-steam-deck.js --device ${{ vars.DEVICE_CODE || 'oled-512' }}
+        env:
+          PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
+          PUSHOVER_TOKEN: ${{ secrets.PUSHOVER_TOKEN }}
