--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
+    "@types/node": "^24.9.2",
+    "@types/yargs": "^17.0.34",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
-    "sort-package-json": "^3.4.0"
+    "sort-package-json": "^3.4.0",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=24.0.0"
