--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "license": "MIT",
   "author": "",
   "type": "module",
-  "main": "check-steam-deck.js",
+  "main": "dist/check-steam-deck.js",
   "scripts": {
-    "check": "node check-steam-deck.js",
-    "check:lcd-256": "node check-steam-deck.js --device lcd-256",
-    "check:lcd-512": "node check-steam-deck.js --device lcd-512",
-    "check:oled-1tb": "node check-steam-deck.js --device oled-1tb",
-    "check:oled-512": "node check-steam-deck.js --device oled-512",
-    "devices": "node check-steam-deck.js --list-devices",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "check": "npm run build && node dist/check-steam-deck.js",
+    "check:dev": "tsx check-steam-deck.ts",
+    "check:lcd-256": "npm run build && node dist/check-steam-deck.js --device lcd-256",
+    "check:lcd-512": "npm run build && node dist/check-steam-deck.js --device lcd-512",
+    "check:oled-1tb": "npm run build && node dist/check-steam-deck.js --device oled-1tb",
+    "check:oled-512": "npm run build && node dist/check-steam-deck.js --device oled-512",
+    "devices": "npm run build && node dist/check-steam-deck.js --list-devices",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint . --cache --fix",
@@ -29,7 +32,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
-    "*.js": [
+    "*.{js,ts}": [
       "eslint --cache --fix",
       "prettier --write"
     ],
@@ -50,11 +53,14 @@
     "@eslint/js": "^9.38.0",
     "@types/node": "^24.9.2",
     "@types/yargs": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
     "sort-package-json": "^3.4.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "engines": {
